--- a/templates/index.html
+++ b/templates/index.html
@@ -54,13 +54,12 @@
 
                     <!-- Question Form (Initially hidden) -->
                     <form id="QuestionForm" style="display: none;">
-                        <h3>Frequently Asked Questions (FAQ) List:</h3>
+                        <h2 id="splunk-login-title">Frequently Asked Questions (FAQ)</h2>
                         <ul id="question-list">
                             <li class="question-item">Show me the error hotspots in the logs for the selected time window</li>
                             <li class="question-item">Historical occurrence of payment failures in the last month</li>
-                            <li class="question-item">Assess failure transactions and provide impacted customers information</li>
+                            <li class="question-item">Assess transaction failures and customers impacted</li>
                             <li class="question-item">Determine anomalies observed</li>
-                            <li class="question-item">List me the exceptions noticed and its counts</li>
                             <li class="question-item">Share the sequence of flow for a withdrawal transaction</li>
                             <li class="question-item">Transaction latency and response time analysis</li>
                             <li class="question-item">List the REST or SOAP URL endpoints application is communicating to</li>
